--- a/index.html
+++ b/index.html
@@ -1,105 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>Share</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@300&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <title>Share</title>
-</head>
-
-<body>
-  <header class="header">
-    <div class="container">
-      <div class="menu">
-        <div class="header_menu">
-          <a class="menu_text" href="#">Log in</a>
-          <a class="menu_text" href="#">Sing up</a>
-        </div>
-        <input type="checkbox" id="toggle">
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="menu">
+          <div class="header_menu">
+            <a class="menu_text" href="#">Log in</a>
+            <a class="menu_text" href="#">Sing up</a>
+          </div>
+          <!-- <input type="checkbox" id="toggle">
         <label for="toggle">
           <span class="toggle-btn">menu</span>
-        </label>
-        <button type="button" class="burger-menu">menu
-          <!-- <svg>
-            <use href=""></use>
-          </svg> -->
-        </button>
-        <a href="#" class="logo">URLAUBSGLÜCK</a>
+        </label> -->
+          <!-- <button type="button" class="burger-menu">
+            menu
+            <svg>
+              <use href=""></use>
+            </svg>
+          </button> -->
+          <a href="#" class="logo">URLAUBSGLÜCK</a>
+        </div>
+        <div class="header_title">
+          <h1 class="title">Share your holiday dreams</h1>
+          <p class="little_title">
+            And find the perfect partner to fullfill it
+          </p>
+          <button class="button" type="button">
+            Find your holiday partner
+          </button>
+        </div>
       </div>
-      <div class="header_title">
-        <h1 class="title">Share your holiday dreams</h1>
-        <p class="little_title">And find the perfect partner to fullfill it</p>
-        <button class="button" type="button">Find your holiday partner</button>
-      </div>
-    </div>
-  </header>
+    </header>
 
-  <main>
-    <section class="partner container">
-      <!-- <div class="partner-title"> -->
-      <h2 class="text">Meet a partner for your best holiday</h2>
-      <!-- </div> -->
-      <ul class="partner-list">
-        <li class="partner-item">
-          <div class="partner-item-img">
-            <img src="img/man_mustache.png" alt="man in glasses" width="120" height="120">
-            <div class="bg-svg">
-              <svg class="partner-item-svg" width="20" height="20">
-                <use href="img/sprite.svg#icon-shape-1"></use>
-              </svg>
+    <main>
+      <section class="partner container">
+        <!-- <div class="partner-title"> -->
+        <h2 class="text">Meet a partner for your best holiday</h2>
+        <!-- </div> -->
+        <ul class="partner-list">
+          <li class="partner-item">
+            <div class="partner-item-img">
+              <img
+                src="img/man_mustache.png"
+                alt="man in glasses"
+                width="120"
+                height="120"
+              />
+              <div class="bg-svg">
+                <svg class="partner-item-svg" width="20" height="20">
+                  <use href="img/sprite.svg#icon-shape-1"></use>
+                </svg>
+              </div>
             </div>
-          </div>
-          <h3 class="name-text">Bradley Hunter</h3>
-          <p>Based in Chicago. I love playing tennis and loud music.</p>
-        </li>
-        <li class="partner-item">
-          <div class="partner-item-img">
-            <img src="img/man.png" alt="" width="120" height="120">
-            <div class="bg-svg">
-              <svg class="partner-item-svg" width="20" height="20">
-                <use href="img/sprite.svg#icon-shape-3"></use>
-              </svg>
+            <h3 class="name-text">Bradley Hunter</h3>
+            <p>Based in Chicago. I love playing tennis and loud music.</p>
+          </li>
+          <li class="partner-item">
+            <div class="partner-item-img">
+              <img src="img/man.png" alt="" width="120" height="120" />
+              <div class="bg-svg">
+                <svg class="partner-item-svg" width="20" height="20">
+                  <use href="img/sprite.svg#icon-shape-3"></use>
+                </svg>
+              </div>
             </div>
-          </div>
-          <h3 class="name-text">Lucas Marsha</h3>
-          <p>I get my inspiration from nature and objects around me. I have a passion to colours,
-            typography and
-            skateboards.</p>
-        </li>
-        <li class="partner-item">
-          <div class="partner-item-img">
-            <img src="img/woman.png" alt="" width="120" height="120">
-            <div class="bg-svg">
-              <svg class="partner-item-svg" width="20" height="20">
-                <use href="img/sprite.svg#icon-shape-2"></use>
-              </svg>
+            <h3 class="name-text">Lucas Marsha</h3>
+            <p>
+              I get my inspiration from nature and objects around me. I have a
+              passion to colours, typography and skateboards.
+            </p>
+          </li>
+          <li class="partner-item">
+            <div class="partner-item-img">
+              <img src="img/woman.png" alt="" width="120" height="120" />
+              <div class="bg-svg">
+                <svg class="partner-item-svg" width="20" height="20">
+                  <use href="img/sprite.svg#icon-shape-2"></use>
+                </svg>
+              </div>
             </div>
-          </div>
-          <h3 class="name-text">Heather Walker</h3>
-          <p>I'm a happy person that loves cats and climbing on mountains.</p>
-        </li>
-        <li class="partner-item">
-          <div class="partner-item-img">
-            <img src="img/woman_glasses.png" alt="" width="120" height="120">
-            <div class="bg-svg">
-              <svg class="partner-item-svg" width="20" height="20">
-                <use href="img/sprite.svg#icon-shape-4"></use>
-              </svg>
+            <h3 class="name-text">Heather Walker</h3>
+            <p>I'm a happy person that loves cats and climbing on mountains.</p>
+          </li>
+          <li class="partner-item">
+            <div class="partner-item-img">
+              <img
+                src="img/woman_glasses.png"
+                alt=""
+                width="120"
+                height="120"
+              />
+              <div class="bg-svg">
+                <svg class="partner-item-svg" width="20" height="20">
+                  <use href="img/sprite.svg#icon-shape-4"></use>
+                </svg>
+              </div>
             </div>
-          </div>
-          <h3 class="name-text">Bradley Hunter</h3>
-          <p>Based in Chicago. I love playing tennis and loud music.</p>
-        </li>
-      </ul>
-      <button class="other_button" type="button">See other partners</button>
-    </section>
-  </main>
-  <footer></footer>
-</body>
-
+            <h3 class="name-text">Bradley Hunter</h3>
+            <p>Based in Chicago. I love playing tennis and loud music.</p>
+          </li>
+        </ul>
+        <button class="other_button" type="button">See other partners</button>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
