made img to retina

--- a/index.html
+++ b/index.html
@@ -55,12 +55,17 @@
         <ul class="partner-list">
           <li class="partner-item">
             <div class="partner-item-img">
-              <img
-                src="img/man_mustache.png"
-                alt="man in glasses"
-                width="120"
-                height="120"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/partner_4.png 1x, ./img/partner_4@2x.png 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="../img/partner_3.png, ../img/partner_3@2x.png 2x"
+                />
+                <img src="img/partner_4.png" alt="" />
+              </picture>
               <div class="bg-svg">
                 <svg class="partner-item-svg" width="20" height="20">
                   <use href="img/sprite.svg#icon-shape-1"></use>
@@ -72,7 +77,17 @@
           </li>
           <li class="partner-item">
             <div class="partner-item-img">
-              <img src="img/man.png" alt="" width="120" height="120" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/partner_1.png 1x, ./img/partner_1@2x.png 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="../img/partner_3.png, ../img/partner_3@2x.png 2x"
+                />
+                <img src="img/partner_1.png" alt="" />
+              </picture>
               <div class="bg-svg">
                 <svg class="partner-item-svg" width="20" height="20">
                   <use href="img/sprite.svg#icon-shape-3"></use>
@@ -87,7 +102,17 @@
           </li>
           <li class="partner-item">
             <div class="partner-item-img">
-              <img src="img/woman.png" alt="" width="120" height="120" />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/partner_3.png 1x, ./img/partner_3@2x.png 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="../img/partner_3.png, ../img/partner_3@2x.png 2x"
+                />
+                <img src="img/partner_3.png" alt="" />
+              </picture>
               <div class="bg-svg">
                 <svg class="partner-item-svg" width="20" height="20">
                   <use href="img/sprite.svg#icon-shape-2"></use>
@@ -99,12 +124,17 @@
           </li>
           <li class="partner-item">
             <div class="partner-item-img">
-              <img
-                src="img/woman_glasses.png"
-                alt=""
-                width="120"
-                height="120"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./img/partner_2.png 1x, ./img/partner_2@2x.png 2x"
+                />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="../img/partner_3.png, ../img/partner_3@2x.png 2x"
+                />
+                <img src="img/partner_2.png" alt="" />
+              </picture>
               <div class="bg-svg">
                 <svg class="partner-item-svg" width="20" height="20">
                   <use href="img/sprite.svg#icon-shape-4"></use>
